[gd_scene load_steps=4 format=3 uid="uid://8oyd1frivj4b"]

[ext_resource type="Script" path="res://scripts/enemy_bullet.gd" id="1_h7fse"]
[ext_resource type="Texture2D" uid="uid://b085i4ygb8nbo" path="res://assets/kenney_pixelshmup/Tiles/tile_0012.png" id="2_41lp4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y7wog"]
radius = 13.0
height = 38.0

[node name="enemy_bullet" type="Area2D"]
script = ExtResource("1_h7fse")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(31, 26.5)
rotation = 3.13495
scale = Vector2(2.375, 2.8125)
texture = ExtResource("2_41lp4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(31, 25)
shape = SubResource("CapsuleShape2D_y7wog")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Despawntimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Despawntimer" to="." method="_on_despawntimer_timeout"]
